# cam-project-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  config_example.json  config_server_example.json  docker-compose.yaml  go.mod  go.sum  main.go  requirements.txt  rustfmt.toml
benchmarks/: check_dg2_pytorch.py  test_opencv_mobilenet.py  test_pytorch_mobilenet_v3.py  test_pytorch_xpu_mobilenetv3.py  test_pytorch_xpu_resnet50.py  test_pytorch_xpu_yolo.py  test_pytorch_yolov8.py
client/: Cargo.toml  build.rs
client/src/: lib.rs  main.rs
client/src/api/: camera_api_client_worker.rs  classifier_worker.rs  mod.rs  ndarray_util.rs
client/src/classifier_grpc_client/: mod.rs
cmd/: client.go  root.go
models/yolov8/: yolov8n.onnx
pkg/video/: init.go  video.go
proto/: image_classification.proto
proto/image_classifier/: image_classification.pb.go
scripts/: archive_images.sh  build-server-rocm.sh  compile_protos.sh  convert-pt-model-to-onnx.py  find_circle_in_image.py  start_server.sh  take_pic.py
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/classifier_grpc_server/: mod.rs
server/src/config/: server.rs
server/src/ort_backend/: mod.rs
src/: camera.rs  common.py  lib.rs  main.py  main.rs  server.py  server.rs
src/VideoDevice/: ESPCam.py  __init__.py
src/api/: camera_api_client_worker.rs  classifier_grpc.rs  classifier_worker.rs  interfaces.rs  mod.rs
src/camera/: mod.rs  server.rs  worker.rs
src/classifier_grpc_client/: mod.rs
src/classifier_grpc_server/: mod.rs
src/config/: client.rs  mod.rs
src/data_struct/: ring_buffer.rs
src/ort_backend/: mod.rs
src/pb/: mod.rs
test/: send_example_classify.py  test_image_adjustments.py  test_notification_ping.py
utils/: Cargo.toml
utils/src/storage/: storage_manager.rs
