[package]
name = "apartment-cam"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Local libraries.
utils  = { path = 'utils' }
client = { path = 'client'}
server = { path = 'server' }

# 3rd party libraries.
tokio = { version = "1.34.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.10.2"
