[package]
name = "client"
version = "1.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true

[dependencies]
# Local libraries.
utils = { path = '../utils' }

# 3rd party libraries.
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.3"

# https://docs.rs/crate/opencv/0.89.0/features
# BUG: Disable default features as DNN features conflict with ORT.
# Failure signature:
#   File already exists in database:
#   Check failed: GeneratedDatabase()->Add(encoded_file_descriptor, size)
opencv = { version = "0.89.0", features = ["video", "videoio", "imgcodecs", "imgproc"], default-features = false }

# https://docs.rs/reqwest/0.11.22/reqwest/index.html
reqwest = { version = "0.11.22", features = ["rustls-tls", "json"] }
rustls = "0.22.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
base64 = "0.21.5"

# Images
image = "0.24.7"
ndarray = "0.15.6"
libmath = "0.2.1"

# gRPC
tonic = "0.11.0"
prost = "0.12.3"
tokio-stream = "0.1.14"
chrono = "0.4.31"


[build-dependencies]
tonic-build = "0.10.2"
